# lush

./: .gitignore  0-CVS-INFO  CHANGES  COPYRIGHT  Makefile.in  README  README.binutils  README.cygwin  README.gnuplot  README.mac  README.psu-lush  aclocal.m4  configure  configure.ac
contrib/: datagetter.lsh
contrib/sanders/: README  spmat.lsh
data/: about-images.txt
data/images/: barbara.tga  boat.tga  einstein.tga
debian/: .gitignore  NOTES  README.Debian  TODO  blends  changelog  control  copyright  lush-library.dirs  lush-library.emacsen-install  lush-library.emacsen-remove  lush-library.lintian-overrides  lush.docs  lush.manpages  postinst  prerm  rules  watch
debian/lintian/: lush-library
debian/patches/: 00list  01-python.dpatch  02-manpage  02-manpage.dpatch  03-gcc4-amd64.dpatch  03-gcc4-mips.dpatch  04-ftbfs.dpatch  04-gcc4-mips.dpatch  04-ld-no-add-needed  05-ftbfs.dpatch  05-kfreebsd-gnu.dpatch  DIFF  cvs20070918.dpatch  cvs20080204.dpatch  cvs20101229  cvs20101229.dpatch  cvs20110227  series
demos/: README  RUNME  calculator  cat-demo  glteapot  gnuplot-demo  hand-points.lsh  iterators.lsh  lunar-lander  lushdoc  lushlife  lushlife.lsh  sdl-bounce  sdl-lushlife  sdl-slimevolley  sdlgl-triangle  show-image  simple-gui  wilkinson.lsh
demos/gnuplot/: multimsh.dem  world.cor
doc/: README
etc/: README.ivtools  compile-all  lush-find-string  lush.1  lush.el  lush2.1  make-html-manual  make-latex-manual  make-pdf-manual
include/: allocate.h  amath-macros.h  check_func.h  cmm.h  define.h  dh.h  dldbfd.h  fltlib.h  graphics.h  header.h  idx.h  idxmac.h  idxops.h  idxsquops.h  lushconf.h.in  lushmake.h.in  mm.h  mm_private.h
legacy/blas/: blas-c.lsh  blas-config.lsh  blas-s.lsh  blas-z.lsh  blas.hlp
legacy/htk/: htk-config.lsh  htk_shell.lsh  htk_train.lsh
legacy/lsh/libc/: constants.lsh  mallinfo.lsh
legacy/lsh/libgraph/: grammar.lsh
legacy/lsh/libidx/: idx-pool.lsh
legacy/lsh/libsp/: filtering.lsh
legacy/lsh/manual/: numberlists.hlp
legacy/src/: allocate.c  classify.c  comdraw_driver.c  dz.c  function.c  lisp_c.c  nan.c
local/: local-manual.hlp
local/mnist/: README
lsh/: lush-manual-latex.hlp  lush-manual.hlp
lsh/compiler/: compiler.hlp  dh-compile.lsh  dh-files.lsh  dh-lists.lsh  dh-macro.lsh  dh-strings.lsh  dh-util.lsh  lush_runtime.c  make-standalone.lsh  quicktour.txt
lsh/data/: analysis.lsh
lsh/datatypes/: builtin-tree-nodes.lsh  byte-set.lsh  byte-tree-node.lsh  char-set.lsh  char-tree-node.lsh  datatypes.hlp  deque.lsh  dll.lsh  double-set.lsh  double-tree-node.lsh  dynamic-graph-utils.lsh  dynamic-graph.lsh  float-set.lsh  float-tree-node.lsh  gptr-set.lsh  gptr-tree-node.lsh  graph-iterators.lsh  graph-orderings.lsh  graph-utils.lsh  graph.lsh  heap.lsh  int-graph-utils.lsh  int-graph.lsh  int-heap.lsh  int-set.lsh  int-tree-node.lsh  ipair-set.lsh  ipair-tree-node.lsh  ipair.lsh  iterable-datatype.lsh  ordered-set-utils.lsh  ordered-set.lsh  pairing-heap.lsh  partition-iterator.lsh  partition.lsh  queue.lsh  short-set.lsh  short-tree-node.lsh  small-int-graph-utils.lsh  small-int-graph.lsh  (+9 more)
lsh/geometry/: axial-descriptor.lsh  demos.lsh  geometry-utils.lsh  geometry.hlp  geometry.lsh  lasso.lsh  mesh-utils.lsh  mesh.lsh  polygon-utils.lsh  polygon.lsh  simplify.lsh  triangulation-utils.lsh  triangulation.lsh
lsh/libc/: add-makehelp.lsh  constants.lsh  cparse.lsh  cstruct.lsh  files.lsh  fortran.lsh  libc.lsh  make.lsh  mallinfo.lsh  shell.lsh  stdio.lsh  stopwatch.lsh
lsh/libcl/: lists.lsh  numbers.lsh  symbols.lsh
lsh/libdb/: db.lsh  image-db.lsh  libdb.hlp
lsh/libgraph/: grammar.lsh  graph.lsh  gsearch.lsh  gtransform.lsh  rsearch.lsh
lsh/libidx/: binning.lsh  finding.lsh  idx-array.lsh  idx-convol.lsh  idx-double.lsh  idx-float.lsh  idx-int.lsh  idx-io.lsh  idx-macros.lsh  idx-map.lsh  idx-pool.lsh  idx-sort.lsh  idx-squops.lsh  idx-ubyte.lsh
lsh/libimage/: cca.lsh  color-quantize.lsh  fimage.lsh  image-io.lsh  image-transform.lsh  img-util.lsh  integral.lsh  libimage.hlp  mask-tools.lsh  morpho-short.lsh  morpho.lsh  pbm.lsh  pnm.lsh  rgbafim-greypage.lsh  rgbafimage.lsh  rgbaim-greypage.lsh  rgbaimage.lsh  rle.lsh  run-macros.lsh  runs2ubim.lsh  segment-config.lsh  shimage.lsh  show.lsh  srg.lsh  thumbnails.lsh  ubimage.lsh
lsh/libogre/: calctool.lsh  classtool.lsh  helptool.lsh  ldocpane.lsh  ogre.hlp  ogre.lsh  treebrowser-test.lsh  treebrowser.lsh
lsh/libplot/: graphic-driver.lsh  plotter.lsh  svg.lsh
lsh/librng/: nonparametric.lsh
lsh/libsp/: transforms.lsh
lsh/libstd/: arrays.lsh  boxing.lsh  brace.lsh  cluster.lsh  color-tools.lsh  compat.lsh  dbg.lsh  dynamic.lsh  dz.lsh  graphenv.lsh  help.lsh  iterator-classes.lsh  iterator.lsh  kwdargs.lsh  ldoc.lsh  ltree.lsh  mat.lsh  more-iterator-classes.lsh  namespace.lsh  oldplotenv.lsh  oo.lsh  overload.lsh  plotenv.lsh  remote.lsh  scheme-names.lsh  svgwindow.lsh  symbols.lsh  threads.lsh  tiling.lsh
lsh/libsvqp/: svqp.cpp  svqp.h  svqp.lsh
lsh/libtex/: README  bibtex.lsh  texhtml.lsh  texutf8.lsh
lsh/manual/: boolean.hlp  comdraw-graphics.hlp  control.hlp  copying.hlp  date.hlp  dynloader.hlp  dz.hlp  events.hlp  faq.hlp  functions.hlp  graphics.hlp  help.hlp  helptool-shortcuts.hlp  htable.hlp  idx.hlp  inputoutput.hlp  language-compatibility.hlp  list.hlp  lush-basics.hlp  lush-definition.hlp  lush-interpreter-internals.hlp  lush-intro.hlp  lush-tutorial.hlp  lush-version.hlp  miscellaneous.hlp  numberlists.hlp  numbers.hlp  objects.hlp  open.hlp  plotting.hlp  psu-lush.hlp  storage.hlp  strings.hlp  symbol.hlp  tltools.hlp
lsh/profiler/: profile.lsh
lsh/testing/: tools.lsh
src/: Makefile.in  allocate.c  arith.c  at.c  avltree.c  binary.c  calls.c  check_func.c  classify.c  cmm.c  comdraw_driver.c  cpp.cpp  cref.c  date.c  dh.c  dldbfd.c  dump.c  dz.c  eval.c  event.c  fileio.c  fltlib.c  fpu.c  function.c  graphics.c  htable.c  idx1.c  idx2.c  idx3.c  idx4.c  index.c  io.c  lisp_c.c  lisp_driver.c  list.c  main.c  math.c  misc.c  mm.c  module.c  (+14 more)
sys/: psdriver.pro  stdenv.lsh  sysenv.lsh
testing/: test-cref.lsh
(+7 files in other folders)
